--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "dependencies": {
     "@openzeppelin/contracts": "^3.4.0",
-    "@trufflesuite/web3-provider-engine": "^15.0.13-1",
-    "ethereumjs-wallet": "^1.0.1",
+    "@truffle/hdwallet-provider": "^1.2.6",
     "dotenv": "^8.2.0",
-    "truffle": "^5.1.66",
-    "solc": "^0.7.6"
+    "solc": "^0.7.6",
+    "truffle": "^5.3.1"
   }
 }
